# Implementacja-wybranych-algorytm-w-algebry-liniowej-z-wykorzystaniem-modelu-programowania-oneAPI

./: README.md
kody implementacji/MnozenieMacierzy/WersjaCPP/: MnorzenieCPP.cpp
kody implementacji/MnozenieMacierzy/WersjaOneAPI/: CMakeLists.txt  CMakePresets.json  MnozenieMacierzy.cpp
kody implementacji/RedukcjaWsteczna/WersjaCPP/: RedukcjaWsteczna.cpp
kody implementacji/RedukcjaWsteczna/WersjaOneAPI/: CMakeLists.txt  RedukcjaWsteczna.cpp
kody implementacji/RozkladLU/WersjaCPP/: RozkladLU.cpp
kody implementacji/RozkladLU/WersjaOneAPI/: CMakeLists.txt  Rozklad_LU.cpp
